[package]
name = "npsmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte_struct = "0.9.0"
crossterm = "0.27.0"
hex = "0.4.3"
log = "0.4.20"
openssl = "0.10.35"
simplelog = "0.12.1"
tokio = { version = "1.35.1", features = ["full"] }

